# lethe

./: Cargo.toml  README.md  flake.nix
.config/: hakari.toml
.github/workflows/: ci.yml
crates/lethe-cli/: Cargo.toml
crates/lethe-cli/src/: cli.rs  main.rs
crates/lethe-core/: Cargo.toml
crates/lethe-core/src/: lib.rs
crates/lethe-core/src/identifier/: mod.rs
crates/lethe-core/src/note/: mod.rs
crates/lethe-core/src/repository/: mod.rs
crates/lethe-core/src/store/: mod.rs
crates/lethe-workspace-hack/: Cargo.toml
crates/phaneron-cli/: Cargo.toml
crates/phaneron-cli/src/: main.rs
crates/phaneron-core/: Cargo.toml
crates/phaneron-workspace-hack/: Cargo.toml
docs/: README.md  repository.md  store.md  testing.md
nix/apps/: default.nix
nix/base/: default.nix
nix/checks/: default.nix
nix/formatting/: default.nix
nix/shell/: default.nix
